# guard

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
guard/: .gitignore  Cargo.toml  README.md  rbac.conf
guard-console/: Cargo.toml
guard-console/src/: main.rs
guard-grpc/: Cargo.toml  build.rs
guard-grpc/proto/: enforcer.proto
guard-grpc/src/: lib.rs
guard-postgres/: .gitignore  Cargo.toml  docker-compose.yml  init.sql
guard-postgres/src/: access.rs  enforce.rs  lib.rs  namespace.rs  permission.rs  role.rs
guard-postgres/tests/: access.rs  namespace.rs  permission.rs
guard-server/: Cargo.toml  README.md
guard-server/resources/en-US/: header_links.ftl  permission.ftl  simple.ftl
guard-server/resources/fr/: header_links.ftl  permission.ftl  simple.ftl
guard-server/src/: client.rs  error.rs  links.rs  main.rs  namespace.rs  security.rs  user.rs
guard-server/src/api/: access.rs  me.rs  mod.rs  namespace.rs  permission.rs  role.rs  root.rs
guard-server/src/api/jwt/: extractor.rs  mod.rs
guard-server/src/api/namespace/: handlers.rs  mod.rs  responses.rs
guard-server/src/api/role/: mod.rs  role.rs
guard-server/src/ui/: app.js  index.html
guard-ui/: Cargo.toml  README.md
guard-ui/src/: app.js  app.rs  main.rs
guard/src/: access.rs  enforce.rs  error.rs  jwt.rs  lib.rs  namespace.rs  permission.rs  role.rs
guard/tests/: access.rs  enforcer.rs  namespace.rs  permission.rs  repository.rs  role.rs
