[package]
name = "guard-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
tokio = { version = "1.17.0", features = [] }
guard = { path = "../guard" }
guard-postgres = { path = "../guard-postgres" }
dotenv = "0.15.0"
