[package]
name = "guard-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
guard = { path = "../guard" }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5.11", features = ["macros", "runtime-tokio-native-tls", "postgres"] }
