[package]
name = "guard-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guard = { path = "../guard" }
guard-grpc = { path = "../guard-grpc" }
guard-postgres = { path = "../guard-postgres" }
poem = { version = "1.3.7", features = ["i18n", "anyhow", "tower-compat"] }
poem-openapi = { version = "1.3.7", features = ["swagger-ui"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.6.2"
serde = { version = "1.0.136", feature = ["derive"] }
dotenv = "0.15.0"

[[bin]]
name = "guard-client"
path = "src/client.rs"
