[package]
name = "guard-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guard = { path = "../guard", features = ["poem"] }
guard-grpc = { path = "../guard-grpc" }
guard-postgres = { path = "../guard-postgres" }
poem = { version = "1.3.8", features = ["i18n", "anyhow", "tower-compat"] }
poem-openapi = { version = "1.3.8", features = ["swagger-ui"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.6.2"
serde = { version = "1.0.136", features = ["serde_derive"] }
dotenv = "0.15.0"
tracing-subscriber = "0.3.9"

[[bin]]
name = "guard-client"
path = "src/client.rs"
